--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/x-data-grid": "^6.18.1",
@@ -18,10 +19,12 @@
     "bcryptjs": "^2.4.3",
     "mongo": "^0.1.0",
     "mongoose": "^8.0.0",
-    "next": "14.0.1",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.4"
+    "react-hook-form": "^7.48.2",
+    "swr": "^2.2.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
