--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.14.17",
     "@mui/x-data-grid": "^6.18.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "mongo": "^0.1.0",
     "mongoose": "^8.0.0",
     "next": "^14.0.3",
