--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,5 @@
 HOST_NAME=http://localhost:3000
-MONGO_URL=mongodb+srv://romanofr:ePUstl3096jEJV2A@open-jira.ekrkget.mongodb.net/items-control-db
-#mongodb://localhost:27017/items-control-db
+MONGO_URL=mongodb://localhost:27017/items-control-db
 
 
 #Tax
