Visuals and login part 1

--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ MONGO_URL=mongodb://localhost:27017/items-control-db
 #Tax
 NEXT_PUBLIC_TAX_RATE=0.18
 
+JWT_SECRET_SEED=LaSemillapalToken21
 
 #Providers
 GITHUB_ID=521cdd3b95b949590d02
