--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ MONGO_URL=mongodb+srv://romanofr:ePUstl3096jEJV2A@open-jira.ekrkget.mongodb.net/
 #Tax
 NEXT_PUBLIC_TAX_RATE=0.18
 
+JWT_SECRET_SEED=LaSemillapalToken22
 
 #Providers
 GITHUB_ID=521cdd3b95b949590d02
