--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@mui/x-data-grid": "^6.18.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "jose": "^5.1.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongoose": "^8.0.0",
     "next": "^14.0.3",
     "react": "^18",
-    "react-cookie": "^6.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-toastify": "^9.1.3",
